case_FP16_4090pro/envoy-ai-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ai-gateway
  namespace: envoy-ai-gateway-system
  labels:
    serving.kserve.io/gateway: kserve-ingress-gateway
spec:
  gatewayClassName: envoy
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: ai-gateway-proxy
  listeners:
    - name: llm-https
      protocol: HTTPS
      port: 443
      hostname: llm.yacodata.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: envoy-tls-cert
      allowedRoutes:
        namespaces:
          from: All
    - name: chat-https
      protocol: HTTPS
      port: 443
      hostname: chat.yacodata.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: chat-tls-cert
      allowedRoutes:
        namespaces:
          from: All
